src/test/ui/span/borrowck-ref-into-rvalue.stderr
error[E0597]: borrowed value does not live long enough
  --> $DIR/borrowck-ref-into-rvalue.rs:14:14
   |
14 |         Some(ref m) => {
   |              ^^^^^ borrowed value does not live long enough
...
19 |     }
   |     - borrowed value dropped here while still borrowed
20 |     println!("{}", *msg);
21 | }
   | - borrowed value needs to live until here
   |
   = note: consider using a `let` binding to increase its lifetime

error: aborting due to previous error

